# crdt-lite

./: .clangd  .editorconfig  .gitignore  .gitignore.swift  BUILD.md  CLAUDE.md  CMakeLists.txt  CRDT.cs  CRDTTests.cs  Cargo.toml  FINAL_RECOMMENDATIONS.md  FORMAT_COMPARISON_FINAL.md  IMPLEMENTATION_STATUS.md  INCREMENTAL_SNAPSHOTS_DESIGN.md  LICENSE  ListCRDT.cs  Makefile  PHASE1_COMPLETE.md  Package.swift  Program.cs  README.md  README_RUST.md  README_SQLITE.md  SCHEMA_EVOLUTION_INVESTIGATION.md  SERIALIZATION_FORMAT_ANALYSIS.md  SUMMARY.md  SWIFT_README.md  TEXT_CRDT_README.md  UUID_GUIDE.md  WIP.md  ZERO_COPY_SERIALIZATION_ANALYSIS.md  benchmark.cpp  block_crdt_final.hpp  check_shadow  check_shadow.cpp  crdt-lite.csproj  crdt.cpp  crdt.hpp  crdt_sqlite.cpp  crdt_sqlite.hpp  (+36 more)
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  rust-ci.yml  swift-ci.yml  test.yml
Examples/: SwiftExample.swift
Sources/CRDTLite/: CRDT.swift
Tests/CRDTLiteTests/: CRDTTests.swift
examples/: basic_usage.rs  demo_incremental_snapshots.rs  persistence_example.rs  r2_backup_example.rs  test_bincode_behavior.rs  test_schema_evolution.rs  test_schema_evolution_failure.rs  test_serialization_formats.rs  test_snapshot_zerocopy.rs
src/: crdt.rs  lib.rs  persist.rs
src/persist/: hooks.rs  streaming.rs  wal.rs
tests/: integration_tests.rs  persist_tests.rs  test_msgpack_incremental.rs
