[package]
name = "crdt-lite"
version = "0.2.0"
edition = "2021"
authors = ["CRDT Contributors"]
description = "A lightweight, column-based CRDT implementation in Rust"
license = "MIT"
repository = "https://github.com/sinkingsugar/crdt-lite"
homepage = "https://github.com/sinkingsugar/crdt-lite"
documentation = "https://docs.rs/crdt-lite"
readme = "README.md"
keywords = ["crdt", "distributed", "replication", "collaboration", "conflict-resolution"]
categories = ["data-structures", "algorithms", "concurrency"]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }
bincode = { version = "1.3", optional = true }
# hashbrown provides HashMap for no_std environments (it's the same implementation std uses)
# We use default features which includes the hasher (foldhash)
hashbrown = "0.15"

[dev-dependencies]
serde_json = "1.0"
bincode = "1.3"

[features]
default = ["std"]
std = []
serde = ["dep:serde", "hashbrown/serde"]
json = ["serde", "dep:serde_json"]
binary = ["serde", "dep:bincode"]

[lib]
name = "crdt_lite"
path = "src/lib.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
