[package]
name = "crdt-lite"
version = "0.2.0"
edition = "2021"
authors = ["CRDT Contributors"]
description = "A lightweight, column-based CRDT implementation in Rust"
license = "MIT"
repository = "https://github.com/sinkingsugar/crdt-lite"
homepage = "https://github.com/sinkingsugar/crdt-lite"
documentation = "https://docs.rs/crdt-lite"
readme = "README.md"
keywords = ["crdt", "distributed", "replication", "collaboration", "conflict-resolution"]
categories = ["data-structures", "algorithms", "concurrency"]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }
# bincode 2.0 has proper no_std support - serde feature is needed for bincode::serde module
bincode = { version = "2.0.1", optional = true, default-features = false, features = ["alloc", "derive", "serde"] }
# hashbrown provides HashMap for no_std environments (it's the same implementation std uses)
# Only needed when std is disabled
hashbrown = { version = "0.15", optional = true }

[dev-dependencies]
serde_json = "1.0"
bincode = "2.0.1"

[features]
default = ["std"]
std = []
# When std is disabled, we need hashbrown for HashMap
# When serde is enabled without std, we need hashbrown/serde
serde = ["dep:serde"]
json = ["serde", "dep:serde_json"]
binary = ["serde", "dep:bincode"]

# Automatically enable hashbrown when not using std
[target.'cfg(not(feature = "std"))'.dependencies]
hashbrown = { version = "0.15", features = ["serde"] }

[lib]
name = "crdt_lite"
path = "src/lib.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
